anatomogram now has fixed position that make it visible also while scrolling vertically

--- a/web/src/main/webapp/public-resources/css/table-grid.css
+++ b/web/src/main/webapp/public-resources/css/table-grid.css
@@ -12,8 +12,11 @@
     border-collapse: collapse;
 }
 
-.form-grid label{
+.form-grid{
     width: 100%;
+}
+
+.form-grid label{
     border: 0px;
     font-weight: bold;
 }
